--- a/app/globals.css
+++ b/app/globals.css
@@ -91,6 +91,23 @@
   color: white;
 }
 
+.cl-card{
+  border-radius: 30px 30px 0 0;
+}
+.cl-footer {
+  border-radius: 0 0 30px 30px;
+}
+
+.cl-input{
+  border-radius: 7px;
+  padding: 6px 15px;
+}
+
+.cl-internal-livpi4{
+  color: #fff;
+  opacity: 1;
+}
+
 /* =============================== */
 
 @layer utilities {
@@ -122,4 +139,9 @@
     animation-timing-function: ease-in;
     width: 100%;
   }
+}
+
+/* ====  shadcn ui override ===== */
+.lucide{
+  color: #fff;
 }
