--- a/app/globals.css
+++ b/app/globals.css
@@ -91,19 +91,20 @@
   color: white;
 }
 
-.cl-card{
+.cl-card {
   border-radius: 30px 30px 0 0;
 }
+
 .cl-footer {
   border-radius: 0 0 30px 30px;
 }
 
-.cl-input{
+.cl-input {
   border-radius: 7px;
   padding: 6px 15px;
 }
 
-.cl-internal-livpi4{
+.cl-internal-livpi4 {
   color: #fff;
   opacity: 1;
 }
@@ -142,6 +143,31 @@
 }
 
 /* ====  shadcn ui override ===== */
-.lucide{
+.lucide {
   color: #fff;
 }
+/* 
+.str-video__speaker-layout__participants-bar {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  width: 100px;
+  height: 300px;
+  overflow-y: scroll;
+  border: 1px solid red;
+  padding: 0 !important;
+} */
+
+/* .str-video__speaker-layout__participant-tile {
+  width: 170px !important;
+  min-width: 170px !important;
+  border: 1px solid white;
+  margin: 0 !important;
+}
+
+.str-video__video-placeholder__avatar {
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: contain !important;
+
+} */
